--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
 
 :root {
 	--primary-white: #fff;
+	--primary-orange: #f9ab00;
+	--primary-dark: rgba(255, 255, 255, 0);
 }
 
 body {
@@ -12,13 +14,12 @@ body {
 
 .logo {
 	width: 6.25rem;
-	height: 5.25rem;
+	/* height: 5.25rem; */
 }
 
 /*-------------- MENU LINKS ---------------*/
 
 nav a.nav-link {
-	/* font-weight: 500; */
 	font-size: 0.8rem;
 	letter-spacing: 0.0375rem;
 	cursor: pointer;
@@ -32,10 +33,20 @@ nav ul li {
 	margin-right: 0.75rem;
 	margin-left: 0.75rem;
 	color: var(--primary-white) !important;
+	border-top: 0.1875rem solid var(--primary-dark);
 }
 
 .navbar-brand {
-	max-width: 17.25rem !important;
+	max-width: 17.25rem;
 	padding: 0 !important;
 	height: 6rem !important;
+}
+
+.navbar-nav > li > a.active,
+.navbar-nav > li > a:active:focus {
+	border-top: 0.1875rem solid var(--primary-orange);
+}
+
+.navbar-nav > li > a:hover {
+	border-top: 0.1875rem solid var(--primary-orange);
 }
