--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,27 @@ nav ul li {
 .navbar-nav > li > a:hover {
 	border-top: 0.1875rem solid var(--primary-orange);
 }
+
+/****************************** Background *************************************/
+
+.header-wrapper {
+	position: relative;
+	background: url(background-image-programming.jpg) no-repeat;
+	background-size: cover;
+	background-position: center;
+	height: 90vh;
+}
+
+.main-info {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	font-family: "Open Sans" sans-serif;
+}
+
+.main-info h1 {
+	color: var(--primary-white);
+	text-transform: uppercase;
+}
