blue color adjustment

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 :root {
 	--primary-white: #fff;
 	--primary-orange: #f9ab00;
-	--primary-blue: #5eb4ff;
+	--primary-blue: #2bb1ff;
 	--primary-dark: rgba(255, 255, 255, 0);
 	--title-dark: #333333;
 	--tomato-orange: #fc6647;
