About Me Completed

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 :root {
 	--primary-white: #fff;
 	--primary-orange: #f9ab00;
-	--primary-blue: #2bb1ff;
+	--primary-blue: #42e3f5;
 	--primary-dark: rgba(255, 255, 255, 0);
 	--title-dark: #333333;
 	--tomato-orange: #fc6647;
@@ -12,7 +12,7 @@
 }
 
 body {
-	font-family: "Source Sans Pro", sans-serif;
+	font-family: "Source Sans Pro", sans-serif !important;
 }
 
 /****************************** NAVBAR *************************************/
@@ -88,7 +88,6 @@ nav ul li {
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-	font-family: "Open Sans" sans-serif;
 	z-index: 1;
 }
 
@@ -144,5 +143,31 @@ nav ul li {
 @media (max-width: 768px) {
 	.particles-canvas {
 		display: none;
+	}
+}
+
+/************************* About Me ******************************/
+
+.photo-wrap {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.author-image {
+	width: 16rem;
+	border-radius: 50%;
+	padding: 0.3rem;
+	border: 1px solid var(--tomato-orange);
+}
+
+.about-heading {
+	color: var(--tomato-orange);
+	text-transform: uppercase;
+}
+
+@media (max-width: 468px) {
+	.profile-img {
+		width: 10rem;
 	}
 }
