--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,9 @@
 	--title-dark: #333333;
 	--tomato-orange: #fc6647;
 	--primary-gray: #6c767d;
+	--primary-gray-2: #ccd1d9;
+	--primary-dark-gray: #666666;
+	--primary-red: #ef4035;
 }
 
 body {
@@ -226,4 +229,90 @@ nav ul li {
 
 .services .box:hover .circle {
 	background: var(--primary-white);
+}
+
+/************************* EXPERIENCE ******************************/
+.experience {
+	padding: 0.7rem;
+}
+
+.experience-wrapper {
+	position: relative;
+	padding: 3.125rem 0;
+	overflow: hidden;
+}
+
+.experience h1 {
+	text-transform: uppercase;
+	color: var(--tomato-orange);
+}
+
+.experience-wrapper::before {
+	position: absolute;
+	content: "";
+	top: 0;
+	left: 50%;
+	margin-left: -0.0625rem;
+	width: 0.125rem;
+	height: 100%;
+	background: var(--primary-gray-2);
+	z-index: 1;
+}
+
+.timeline-block {
+	width: calc(50% + 0.5rem);
+	display: flex;
+	justify-content: space-between;
+	clear: both;
+}
+
+.timeline-block-right {
+	float: right;
+}
+
+.timeline-block-left {
+	float: left;
+	direction: rtl;
+}
+
+.marker {
+	width: 1rem;
+	height: 1rem;
+	border-radius: 50%;
+	border: 0.3125rem solid var(--primary-dark);
+	background: var(--tomato-orange);
+	margin-top: 0.625rem;
+	z-index: 3;
+}
+
+.timeline-content {
+	width: 95%;
+	padding: 0.9375rem;
+	color: var(--primary-dark-gray);
+	direction: ltr;
+}
+
+.timeline-content h3 {
+	margin-top: 0.3125rem;
+	color: var(--primary-red);
+	font-weight: 900;
+}
+/*----------------------MEDIA----------------------------*/
+@media (max-width: 768px) {
+	.experience .container {
+		padding-left: 0;
+	}
+	.experience-wrapper::before {
+		left: 0.5rem;
+		margin-bottom: 1.875rem;
+	}
+	.timeline-block-right {
+		float: none;
+		width: 100%;
+	}
+	.timeline-block-left {
+		float: none;
+		width: 100%;
+		direction: ltr;
+	}
 }
