--- a/src/App.css
+++ b/src/App.css
@@ -218,6 +218,7 @@ nav ul li {
 	margin-bottom: 1.875rem;
 	background: var(--primary-white);
 	transition: 0.3s ease-in-out;
+	cursor: pointer;
 }
 
 .services .box:hover {
