--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
 	--primary-gray-2: #ccd1d9;
 	--primary-dark-gray: #666666;
 	--primary-red: #ef4035;
+	--primary-black: #000000;
 }
 
 body {
@@ -318,4 +319,54 @@ nav ul li {
 		width: 100%;
 		direction: ltr;
 	}
+}
+/*-----------------------Portfolio---------------------------*/
+
+.portfolio-wrapper {
+	background: var(--primary-light-gray);
+	padding: 3rem 0;
+}
+
+.portfolio-image {
+	width: 15rem;
+	border: 1px solid var(--tomato-orange);
+	padding: 0 0.5rem;
+}
+
+.portfolio-image-box {
+	position: relative;
+	margin: 1rem;
+}
+
+/*-----------------------Overflow Box---------------------------*/
+
+.overflow {
+	position: absolute;
+	opacity: 0;
+	background: var(--primary-black);
+	width: 15rem;
+	height: 9.5rem;
+	top: 0;
+	border: 1px solid var(--primary-red);
+	cursor: pointer;
+}
+
+.portfolio-image-box:hover .overflow {
+	opacity: 60%;
+	transition: 0.2s ease-in-out;
+}
+
+.portfolio-icon {
+	position: absolute;
+	opacity: 0;
+	margin-left: -8rem;
+	margin-top: 3.6rem;
+	color: var(--tomato-orange);
+	font-size: 1.5rem;
+}
+
+.portfolio-image-box:hover .portfolio-icon {
+	opacity: 70%;
+	transition: 0.3s ease-in-out;
+	cursor: pointer;
 }
