--- a/src/App.css
+++ b/src/App.css
@@ -327,6 +327,10 @@ nav ul li {
 	padding: 3rem 0;
 }
 
+.portfolio-wrapper h1 {
+	color: var(--tomato-orange);
+}
+
 .portfolio-image {
 	width: 15rem;
 	border: 1px solid var(--tomato-orange);
@@ -369,4 +373,46 @@ nav ul li {
 	opacity: 70%;
 	transition: 0.3s ease-in-out;
 	cursor: pointer;
+}
+
+/*-----------------------Popup Box---------------------------*/
+
+.portfolio-image-popupbox {
+	width: 45rem;
+	padding: 0 0.5rem;
+}
+
+.hyper-link {
+	cursor: pointer;
+	color: var(--tomato-orange);
+}
+
+.hyper-link:hover {
+	color: var(--primary-red);
+}
+
+/*-----------------------Popup Box @ MEDIA---------------------------*/
+
+@media (max-width: 768px) {
+	.portfolio-image-popupbox {
+		max-width: 100%;
+	}
+}
+
+@media (max-height: 570px) {
+	.popupbox-wrapper {
+		height: 100%;
+	}
+	.portfolio-image-popupbox {
+		width: 50%;
+	}
+}
+
+@media (max-height: 280px) {
+	.popupbox-wrapper {
+		height: 90%;
+	}
+	.portfolio-image-popupbox {
+		width: 30%;
+	}
 }
