--- a/src/App.css
+++ b/src/App.css
@@ -416,3 +416,98 @@ nav ul li {
 		width: 30%;
 	}
 }
+
+/*-----------------------Contact Component---------------------------*/
+
+.contacts {
+	background: var(--primary-dark);
+	padding: 3rem 0;
+}
+
+.contacts h1 {
+	color: var(--tomato-orange);
+	padding: 1.3rem 0;
+	text-transform: uppercase;
+}
+
+.contacts p {
+	color: var(--primary-light-gray);
+	font-size: 1.2rem;
+}
+
+/*-----------------------Inputs---------------------------*/
+
+.contacts input,
+.contacts textarea {
+	width: 100%;
+	box-sizing: border-box;
+	background: none;
+	resize: none;
+	border: 0;
+	border-bottom: 0.125rem solid var(--primary-dark-gray);
+	border-radius: 0;
+	color: var(--tomato-orange);
+	outline: 0 !important;
+	box-shadow: none !important;
+	margin-bottom: 1rem;
+	padding-left: 0 !important;
+}
+
+.contacts .container {
+	padding: 4rem 0;
+}
+
+.contacts input:focus,
+.contacts textarea:focus {
+	background: transparent;
+	color: var(--tomato-orange);
+	border-bottom: 0.125rem solid var(--primary-dark-gray);
+}
+
+.contacts textarea {
+	height: 15.8rem !important;
+}
+
+.contact-btn {
+	margin: 1rem 0 0 0;
+	width: 100%;
+	background: none;
+}
+
+.line {
+	position: relative;
+	top: -1.38rem;
+	width: 0;
+	height: 0.125rem;
+	background: var(--tomato-orange);
+	display: inline-block;
+}
+
+input:focus + .line,
+textarea:focus + .line {
+	width: 100%;
+	transition: width 0.3s ease-in-out;
+}
+
+input.form-control {
+	margin: 0.3rem 0;
+}
+textarea.form-control {
+	margin: 0.3rem 0;
+}
+
+/*-----------------------MEDIA---------------------------*/
+
+@media (max-width: 768px) {
+	.contacts {
+		overflow-x: hidden;
+	}
+
+	.contacts .container {
+		padding: 0 1rem;
+	}
+
+	.contacts p {
+		padding: 0 0.4rem;
+	}
+}
