--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
 	--primary-dark-gray: #666666;
 	--primary-red: #ef4035;
 	--primary-black: #000000;
+	--primary-green: green;
 }
 
 body {
@@ -494,6 +495,17 @@ input.form-control {
 }
 textarea.form-control {
 	margin: 0.3rem 0;
+}
+
+.error-message {
+	color: var(--primary-white);
+	background: var(--primary-red);
+	text-align: left;
+}
+
+.success-message {
+	font-weight: 900;
+	color: var(--primary-green);
 }
 
 /*-----------------------MEDIA---------------------------*/
