--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap");
 
 :root {
 	--primary-white: #ffffff;
@@ -10,7 +10,7 @@
 	--title-dark: #333333;
 	--tomato-orange: #fc6647;
 	--primary-gray: #6c767d;
-	--blue-gray: #4f6777;
+	--blue-gray: #6c7c86;
 	--primary-gray-2: #ccd1d9;
 	--primary-dark-gray: #666666;
 	--primary-red: #ef4035;
