navbar color fix

--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@ nav ul li {
 }
 
 .bg-secondary {
-	background: var(--blue-gray) !important;
+	background: #6c7c86 !important;
 }
 
 .navbar-brand {
